# HenonMap

./: .gitignore  CMakeLists.txt  main.cpp
Plotting/: plotParametrizations.py  testing.py
src/: IOmodule.cpp  henon.cpp  henon.h  paramMethod.cpp  stability.cpp
